--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./styles.css">
     <title>RPG - Dragon Repeller</title>
 </head>
 <body>
